Solved overflow issue with grids using overflow: auto

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ div .header-main {
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
+    height: 100%;
 }
 
 .header {
@@ -191,14 +192,13 @@ div .header-main {
     display: grid;
     grid-template-columns: 2fr 1fr;
     height: 100vh;
+    overflow: auto;
 }
 
 .card-section {
     grid-column: 1;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    /* grid-template-rows: repeat(auto-fit, minmax(3, 1fr));  */
-    /* grid-template-rows: fit-content; */
     gap: 15px;
 }
 
@@ -209,7 +209,6 @@ div .header-main {
     border-left-style: solid;
     border-left-color: rgba(127, 190, 245, 1);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 3px 8px 0 rgba(0,0,0,0.19);
-
 }
 
 .right-section {
